--- a/egbib.bib
+++ b/egbib.bib
@@ -666,3 +666,116 @@ author  = {Hu, Ronghang and Andreas, Jacob and Rohrbach, Marcus and Darrell, Tre
   title = {Convolutional pose machines},
   year = {2016}
 }
+
+@article{Bahdanau2016,
+  abstract = {Neural machine translation is a recently proposed approach to machine translation. Unlike the traditional statistical machine translation, the neural machine translation aims at building a single neural network that can be jointly tuned to maximize the translation performance. The models proposed recently for neural machine translation often belong to a family of encoder-decoders and consists of an encoder that encodes a source sentence into a fixed-length vector from which a decoder generates a translation. In this paper, we conjecture that the use of a fixed-length vector is a bottleneck in improving the performance of this basic encoder-decoder architecture, and propose to extend this by allowing a model to automatically (soft-)search for parts of a source sentence that are relevant to predicting a target word, without having to form these parts as a hard segment explicitly. With this new approach, we achieve a translation performance comparable to the existing state-of-the-art phrase-based system on the task of English-to-French translation. Furthermore, qualitative analysis reveals that the (soft-)alignments found by the model agree well with our intuition.},
+  added-at = {2017-01-05T16:28:03.000+0100},
+  archiveprefix = {arXiv},
+  arxivid = {1409.0473v7},
+  author = {Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+  biburl = {https://www.bibsonomy.org/bibtex/23627201ea916210e80d3cc49b58e40ad/coral.diez},
+  eprint = {1409.0473v7},
+  file = {:C$\backslash$:/Users/Usuario/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Bahdanau, Cho, Bengio - 2014 - Neural Machine Translation by Jointly Learning to Align and Translate.pdf:pdf},
+  interhash = {d15f67689deab1bcce096aa5d17bd314},
+  intrahash = {3627201ea916210e80d3cc49b58e40ad},
+  keywords = {ciencia_computacional traducción_automática_neuronal},
+  month = may,
+  timestamp = {2018-05-28T22:01:50.000+0200},
+  title = {Neural Machine Translation by Jointly Learning to Align and Translate},
+  url = {http://arxiv.org/abs/1409.0473},
+  year = 2016
+}
+
+@InProceedings{Liu_2017_ICCV,
+author = {Liu, Siqi and Zhu, Zhenhai and Ye, Ning and Guadarrama, Sergio and Murphy, Kevin},
+title = {Improved Image Captioning via Policy Gradient Optimization of SPIDEr},
+booktitle = {The IEEE International Conference on Computer Vision (ICCV)},
+month = {Oct},
+year = {2017}
+}
+
+@inproceedings{hu2017learning,
+  title={Learning to Reason: End-to-End Module Networks for Visual Question Answering},
+  author={Hu, Ronghang and Andreas, Jacob and Rohrbach, Marcus and Darrell, Trevor and Saenko, Kate},
+  booktitle={Proceedings of the IEEE International Conference on Computer Vision (ICCV)},
+  year={2017}
+}
+
+@article{fukui16mcb,
+  title={Multimodal Compact Bilinear Pooling for Visual Question Answering and Visual Grounding},
+  author={Fukui, Akira and Park, Dong Huk and Yang, Daylen and Rohrbach, Anna and Darrell, Trevor and Rohrbach, Marcus},
+  journal={arXiv:1606.01847},
+  year={2016},
+}
+
+@inproceedings{DBLP:conf/cvpr/MathePS16,
+  author    = {Stefan Mathe and
+               Aleksis Pirinen and
+               Cristian Sminchisescu},
+  title     = {Reinforcement Learning for Visual Object Detection},
+  booktitle = {2016 {IEEE} Conference on Computer Vision and Pattern Recognition,
+               {CVPR} 2016, Las Vegas, NV, USA, June 27-30, 2016},
+  pages     = {2894--2902},
+  year      = {2016},
+  crossref  = {DBLP:conf/cvpr/2016},
+  url       = {https://doi.org/10.1109/CVPR.2016.316},
+  doi       = {10.1109/CVPR.2016.316},
+  timestamp = {Thu, 25 May 2017 00:41:28 +0200},
+  biburl    = {https://dblp.org/rec/bib/conf/cvpr/MathePS16},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/nips/MnihHGK14,
+  author    = {Volodymyr Mnih and
+               Nicolas Heess and
+               Alex Graves and
+               Koray Kavukcuoglu},
+  title     = {Recurrent Models of Visual Attention},
+  booktitle = {Advances in Neural Information Processing Systems 27: Annual Conference
+               on Neural Information Processing Systems 2014, December 8-13 2014,
+               Montreal, Quebec, Canada},
+  pages     = {2204--2212},
+  year      = {2014},
+  crossref  = {DBLP:conf/nips/2014},
+  url       = {http://papers.nips.cc/paper/5542-recurrent-models-of-visual-attention},
+  timestamp = {Wed, 10 Dec 2014 21:34:12 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/nips/MnihHGK14},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/cvpr/GoodrichA12,
+  author    = {Benjamin Goodrich and
+               Itamar Arel},
+  title     = {Reinforcement learning based visual attention with application to
+               face detection},
+  booktitle = {2012 {IEEE} Computer Society Conference on Computer Vision and Pattern
+               Recognition Workshops, Providence, RI, USA, June 16-21, 2012},
+  pages     = {19--24},
+  year      = {2012},
+  crossref  = {DBLP:conf/cvpr/2012w},
+  url       = {https://doi.org/10.1109/CVPRW.2012.6239177},
+  doi       = {10.1109/CVPRW.2012.6239177},
+  timestamp = {Wed, 06 Feb 2019 10:30:30 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/cvpr/GoodrichA12},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/cvpr/RenWZLL17,
+  author    = {Zhou Ren and
+               Xiaoyu Wang and
+               Ning Zhang and
+               Xutao Lv and
+               Li{-}Jia Li},
+  title     = {Deep Reinforcement Learning-Based Image Captioning with Embedding
+               Reward},
+  booktitle = {2017 {IEEE} Conference on Computer Vision and Pattern Recognition,
+               {CVPR} 2017, Honolulu, HI, USA, July 21-26, 2017},
+  pages     = {1151--1159},
+  year      = {2017},
+  crossref  = {DBLP:conf/cvpr/2017},
+  url       = {https://doi.org/10.1109/CVPR.2017.128},
+  doi       = {10.1109/CVPR.2017.128},
+  timestamp = {Tue, 14 Nov 2017 17:15:06 +0100},
+  biburl    = {https://dblp.org/rec/bib/conf/cvpr/RenWZLL17},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
