--- a/sections/sec-reasoning.tex
+++ b/sections/sec-reasoning.tex
@@ -47,7 +47,7 @@ where $\mathcal{Y}$ is the set of classes.
 %\label{fig:inferGraphWorkflow}
 %\end{figure}
 
-\subsection{Structure Learning of the Inference Graph}
+\subsection{Learning the Structure of Inference Graph}
 
 In the context of Na\"{i}ve Bayes, 
 the structure of $P_\mathfrak{B}(Y|{X})$ is simplified by taking the class variable as the root, and all attributes are conditionally independent when taking the class as a condition \cite{petitjean2018accurate}. As a consequence, the attribute class can be explicitly inferred by:
