--- a/sections/sec-obj.tex
+++ b/sections/sec-obj.tex
@@ -113,7 +113,7 @@ Guided by this action sequence $[\kw{a}_1,\kw{a}_2,\kw{a}_3,\dots,\kw{a}_n]$, ac
 \multirow{1}{*}[-8pt]{visGID}  & \multicolumn{2}{c|}{\multirow{1}{*}[-8pt]{Graph ID Indicator}}	 &  {To indicate which type of graph  will be used in the following process.} \\
 \Xhline{1pt}
 \end{tabularx}
-\caption{\color{red}Visual Task Pool}
+\caption{Visual Task Pool}
 \label{table:visual_tasks}
 \end{table}
 %==========Table===================
